--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-# Copy this file to .env and replace the placeholder values with real API keys.
-ROAD_CORP_API_KEY=changeme-roadcorp
-KMA_API_KEY=changeme-kma
-KASI_API_KEY=changeme-kasi
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Anthropic (Claude API)
+ANTHROPIC_API_KEY=sk-ant-api03-your-key
+
+# KIPRIS API
+KIPRIS_API_KEY=your-kipris-api-key
+
+# App URL (for internal API calls)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
